# python-template

./: .gitignore  .pre-commit-config.yaml  Brewfile  Justfile  LICENSE  Makefile  README.md  cookiecutter.json  devbox.json  pyproject.toml
.github/actions/environment-setup/: action.yml
.github/workflows/: ci.yml  environment-setup.yml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: dev-setup.sh
src/python_template/: __init__.py
src/python_template/utils/: logging.py
tests/unit/: test_dummy.py
tests/unit/utils/: test_logging.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/actions/environment-setup/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/utils/: logging.py
{{cookiecutter.project_name}}/tests/unit/utils/: test_logging.py
